添加免责条款

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "author": "feng <2995207228@qq.com>",
   "description": "CoCoMusic",
-  "license": null,
+  "license": "LGPL-3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
