添加了歌手列表功能

--- a/package.json
+++ b/package.json
@@ -56,9 +56,13 @@
     }
   },
   "dependencies": {
-    "vue": "^2.3.3",
     "axios": "^0.16.1",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
+    "spectre.css": "^0.2.14",
+    "vue": "^2.4.2",
     "vue-electron": "^1.0.6",
+    "vue-lazyload": "^1.0.6",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
@@ -80,8 +84,8 @@
     "css-loader": "^0.28.4",
     "del": "^2.2.1",
     "devtron": "^1.1.0",
-    "electron": "^1.7.4",
-    "electron-builder": "^19.10.0",
+    "electron": "^1.7.5",
+    "electron-builder": "^19.16.2",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.0.1",
     "eslint": "^3.13.1",
@@ -112,11 +116,13 @@
     "spectron": "^3.7.1",
     "standard": "^10.0.2",
     "style-loader": "^0.18.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "webpack-hot-middleware": "^2.18.0",
