--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "cocomusic",
   "version": "0.0.0",
   "author": "feng <2995207228@qq.com>",
-  "description": "CoCoMusic",
+  "description": "CocoMusic",
   "license": "LGPL-3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder",
+    "build": "node .electron-vue/build.js && electron-builder -mwl",
+    "build:win": "node .electron-vue/build.js && electron-builder --win",
+    "build:linux": "node .electron-vue/build.js && electron-builder --linux",
+    "build:mac": "node .electron-vue/build.js && electron-builder --mac",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
@@ -22,8 +25,8 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "cocomusic",
-    "appId": "org.simulatedgreg.electron-vue",
+    "productName": "CocoMusic",
+    "appId": "xyz.xn--zq2aw6m.cocomusic",
     "directories": {
       "output": "build"
     },
