--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocomusic",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "feng <2995207228@qq.com>",
   "description": "CocoMusic",
   "license": "LGPL-3.0",
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "mpris-service": "^1.1.3",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
     "spectre.css": "^0.2.14",
@@ -81,17 +82,18 @@
     "babel-register": "^6.2.0",
     "babili-webpack-plugin": "^0.1.1",
     "cfonts": "^1.1.3",
-    "chai": "^4.0.0",
+    "chai": "^4.1.1",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "del": "^2.2.1",
     "devtron": "^1.1.0",
-    "electron": "^1.7.5",
-    "electron-builder": "^19.16.2",
-    "electron-debug": "^1.1.0",
+    "electron": "^1.7.6",
+    "electron-builder": "^19.22.2",
+    "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.0.1",
+    "electron-rebuild": "^1.6.0",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -103,9 +105,9 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.16.1",
-    "inject-loader": "^3.0.0",
-    "json-loader": "^0.5.4",
+    "html-webpack-plugin": "^2.30.1",
+    "inject-loader": "^3.0.1",
+    "json-loader": "^0.5.7",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
@@ -114,11 +116,11 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.1",
-    "mocha": "^3.0.2",
+    "mocha": "^3.5.0",
     "multispinner": "^0.2.1",
     "require-dir": "^0.3.0",
     "spectron": "^3.7.1",
-    "standard": "^10.0.2",
+    "standard": "^10.0.3",
     "style-loader": "^0.18.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -128,7 +130,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
+    "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   }
