--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "output": "build"
     },
     "files": [
-      "dist/electron/**/*"
+      "dist/electron/**/*",
+      "build/icons/*"
     ],
     "dmg": {
       "contents": [
