[Fix] Linux dock show unknown icon

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "output": "build"
     },
     "files": [
-      "dist/electron/**/*"
+      "dist/electron/**/*",
+      "build/icons/*"
     ],
     "dmg": {
       "contents": [
