[Fix] Linux AppImage install warning of category and description

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/icons",
+      "category": "Audio;AudioVideo"
     }
   },
   "dependencies": {
