--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-# electron build dependencies
-/node_modules
-
-# react app dependencies
-/app/node_modules
-
-# testing
-/app/coverage
-
-# production
-/app/build
-
-# misc
-/app/.DS_Store
-/app/.env.local
-/app/.env.development.local
-/app/.env.test.local
-/app/.env.production.local
-
-/app/npm-debug.log*
-/app/yarn-debug.log*
-/app/yarn-error.log*
+.DS_Store
+dist/electron/*
+dist/web/*
+build/*
+!build/icons
+coverage
+node_modules/
+npm-debug.log
+npm-debug.log.*
+thumbs.db
+!.gitkeep
