--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dexie": "^2.0.4",
+    "mpris-service": "^1.1.3",
     "spectre.css": "^0.5.3",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
