--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,31 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach to Remote",
+      "address": "127.0.0.1",
+      "port": 5858,
+      "localRoot": "${workspaceFolder}/src/main/",
+      "remoteRoot": "Absolute path to the remote directory containing the program"
+    },
     {
       "type": "chrome",
       "request": "attach",
-      "name": "Attach to Chrome",
-      "port": 9222,
-      // "url": "http://localhost:9080/#/lyric",
+      "name": "Electron: Renderer",
+      "port": 9223,
+      "url": "http://localhost:9080/#",
       "webRoot": "${workspaceFolder}"
     },
+  ],
+  "compounds": [
+      {
+          "name": "Electron: All",
+          "configurations": [
+              "Electron: Main",
+              "Electron: Renderer"
+          ]
+      }
   ]
 }
