--- a/package.json
+++ b/package.json
@@ -61,13 +61,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dexie": "^2.0.4",
-    "mpris-service": "^1.1.3",
     "spectre.css": "^0.5.3",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
+  },
+  "optionalDependencies": {
+    "mpris-service": "^1.1.3",
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
