--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "xml2js": "^0.4.19"
   },
   "optionalDependencies": {
-    "mpris-service": "^1.1.3",
+    "mpris-service": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
