完成基本的mpris

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "electron-builder": "^20.22.0",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
+    "electron-rebuild": "^1.8.1",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
