--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocomusic",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "fengT-T <2995207228@qq.com>",
   "description": "a simple music player.",
   "license": "LGPL-3.0",
@@ -9,7 +9,7 @@
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:linux": "node .electron-vue/build.js && electron-builder -l dir deb AppImage pacman",
-    "build:mac": "node .electron-vue/build.js && electron-builder -m",
+    "build:mac": "node .electron-vue/build.js && electron-builder -m zip",
     "build:win": "node .electron-vue/build.js && electron-builder -w",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
