--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocomusic",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "fengT-T <2995207228@qq.com>",
   "description": "a simple music player.",
   "license": "LGPL-3.0",
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
+    "build:linux32": "node .electron-vue/build.js && electron-builder -l deb --ia32",
     "build:linux": "node .electron-vue/build.js && electron-builder -l dir deb AppImage pacman",
     "build:mac": "node .electron-vue/build.js && electron-builder -m zip",
     "build:win": "node .electron-vue/build.js && electron-builder -w",
