--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:linux32": "node .electron-vue/build.js && electron-builder -l deb --ia32",
-    "build:linux": "node .electron-vue/build.js && electron-builder -l dir deb AppImage pacman",
+    "build:linux": "node .electron-vue/build.js && electron-builder -l tar.xz deb AppImage pacman",
     "build:mac": "node .electron-vue/build.js && electron-builder -m zip",
     "build:win": "node .electron-vue/build.js && electron-builder -w",
+    "build:linux-armv7l": "node .electron-vue/build.js && electron-builder -l deb --armv7l",
+    "build:linux-arm64": "node .electron-vue/build.js && electron-builder -l deb --arm64",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
     "dev": "node .electron-vue/dev-runner.js",
@@ -79,11 +81,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dexie": "^2.0.4",
-    "spectre.css": "^0.5.3",
-    "vue": "^2.5.17",
+    "spectre.css": "^0.5.8",
+    "vue": "^2.6.7",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.0",
     "xml2js": "^0.4.19"
   },
   "optionalDependencies": {
@@ -91,7 +93,7 @@
     "dbus": "^0.2.11"
   },
   "devDependencies": {
-    "ajv": "^6.5.0",
+    "ajv": "^6.9.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -101,25 +103,25 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.1.2",
+    "cfonts": "^2.4.2",
     "chai": "^4.1.2",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^3.0.10",
-    "electron-builder": "^20.19.2",
+    "electron": "^4.0.5",
+    "electron-builder": "^20.38.5",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
-    "electron-rebuild": "^1.8.2",
+    "electron-rebuild": "^1.8.4",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
@@ -141,13 +143,13 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
+    "vue-loader": "^15.6.4",
     "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "vue-template-compiler": "^2.6.7",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.2.1"
   }
 }
