--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "electron-builder": "^20.38.5",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-localstorage": "^1.0.5",
     "electron-rebuild": "^1.8.4",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
