--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
   "name": "cocomusic",
-  "version": "0.0.0",
-  "author": "feng <2995207228@qq.com>",
-  "description": "CoCoMusic",
-  "license": "LGPL-3.0",
-  "main": "./dist/electron/main.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
-    "e2e": "npm run pack && mocha test/e2e",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
-    "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "test": "npm run unit && npm run e2e",
-    "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
   "build": {
-    "productName": "cocomusic",
-    "appId": "org.simulatedgreg.electron-vue",
+    "productName": "CocoMusic",
+    "appId": "xyz.xn--zq2aw6m.cocomusic",
     "directories": {
       "output": "build"
     },
     "files": [
-      "dist/electron/**/*"
+      "dist/electron/**/*",
+      "build/icons/*"
     ],
     "dmg": {
       "contents": [
@@ -52,74 +44,62 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/icons",
+      "category": "AudioVideo;Audio;Player;Music;"
+    },
+    "pacman": {
+      "depends": [
+        "gconf",
+        "libnotify",
+        "nss",
+        "libxss",
+        "libappindicator-gtk3",
+        "libxtst"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   },
+  "main": "background.js",
   "dependencies": {
-    "vue": "^2.3.3",
-    "axios": "^0.16.1",
-    "vue-electron": "^1.0.6",
-    "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "axios": "^0.19.2",
+    "chai-as-promised": "^7.1.1",
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.2",
+    "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.3",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.2.0",
-    "babili-webpack-plugin": "^0.1.1",
-    "cfonts": "^1.1.3",
-    "chai": "^4.0.0",
-    "chalk": "^1.1.3",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.4",
-    "del": "^2.2.1",
-    "devtron": "^1.1.0",
-    "electron": "^1.7.4",
-    "electron-builder": "^19.10.0",
-    "electron-debug": "^1.1.0",
-    "electron-devtools-installer": "^2.0.1",
-    "eslint": "^3.13.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.16.1",
-    "inject-loader": "^3.0.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.1",
-    "karma-electron": "^5.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.1",
-    "mocha": "^3.0.2",
-    "multispinner": "^0.2.1",
-    "require-dir": "^0.3.0",
-    "spectron": "^3.7.1",
-    "standard": "^10.0.2",
-    "style-loader": "^0.18.1",
-    "url-loader": "^0.5.7",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^12.2.1",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^5.2.4",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-router": "~4.2.0",
+    "@vue/cli-plugin-typescript": "~4.2.0",
+    "@vue/cli-plugin-unit-mocha": "~4.2.0",
+    "@vue/cli-plugin-vuex": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/eslint-config-typescript": "^5.0.1",
+    "@vue/test-utils": "1.0.0-beta.31",
+    "chai": "^4.1.2",
+    "electron": "^6.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "typescript": "~3.7.5",
+    "vue-cli-plugin-electron-builder": "^1.4.5",
+    "vue-template-compiler": "^2.6.11"
   }
 }
